# isaac-sim-mobile-cobot-pick-place

assets/environments/: MetalBox_1.usd  MetalBox_2.usd  Table_1.usd  Table_2.usd  small_warehouse.usd  small_warehouse_digital_twin.usd
assets/objects/: chewing_gum_cool_air.usd  cube_blue.usd  cube_green.usd  cube_red.usd
assets/robots/: MobileManipulator.usd  MobileManipulator_with_ros2.usd  mobile_cobot.usd
configs/: .env  input.json
ros2_ws/src/manipulation/isaac_moveit/: CMakeLists.txt  package.xml
ros2_ws/src/manipulation/isaac_moveit/launch/: isaac_moveit.launch.py
ros2_ws/src/manipulation/isaac_moveit/scripts/: publish_cubes.py
ros2_ws/src/manipulation/moveit_resources/panda_moveit_config/config/: initial_positions.yaml  panda.ros2_control.xacro  panda.srdf  panda_hand.ros2_control.xacro
ros2_ws/src/mobile_manipulation/: CMakeLists.txt  package.xml
ros2_ws/src/mobile_manipulation/launch/: manipulation_server.launch.py
ros2_ws/src/mobile_manipulation/scripts/: manipulation_client.py  navigation_client.py  task_executor.py  test_arm_poses.py
ros2_ws/src/mobile_manipulation/src/: manipulation_server.cpp
ros2_ws/src/mobile_manipulation/srv/: GoToNamedTarget.srv  GoToPose.srv
ros2_ws/src/navigation/Occupancy Map/: warehouse_env.yaml
ros2_ws/src/navigation/carter_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/navigation/carter_navigation/launch/: carter_navigation_individual.launch.py  carter_warehouse_env.launch.py  nova_carter_description_isaac_sim.launch.py
ros2_ws/src/navigation/carter_navigation/maps/: CMakeLists.txt  warehouse_env.yaml
ros2_ws/src/navigation/carter_navigation/params/: carter_warehouse_env_params.yaml
ros2_ws/src/navigation/carter_navigation/scripts/: generate_initial_pose.py  scan_qos_relay.py  tf_static_relay.py
scripts/: load_warehouse_env.py  record_debug_data.py
